--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,4 +36,4 @@ jobs:
           PRESCO_USERNAME: ${{ secrets.PRESCO_USERNAME }}
           PRESCO_PASSWORD: ${{ secrets.PRESCO_PASSWORD }}
           GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
-          SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
+          # SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
